--- a/FRONTEND/vercel.json
+++ b/FRONTEND/vercel.json
@@ -1,14 +1,13 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "*.html",
+      "src": "index.html",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/",
+      "src": "/(.*)",
       "dest": "/index.html"
     }
   ]
